<resources>
    <string name="app_name">Kefi</string>
    <string name="forget_password"><u>Forget Password?</u></string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="u_prefer_not_to_choose_u"><b><u>Prefer not to choose</u></b></string>
    <string name="i_don_t_know"><u>i don’t know</u></string>
    <string-array name="custom_months">
        <item>JAN</item>
        <item>Feb</item>
        <item>MARCH</item>
        <item>April</item>
        <item>MAY</item>
        <item>June</item>
        <item>JULY</item>
        <item>Aug</item>
        <item>SEPT</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>DEC</item>
    </string-array>
    <string-array name="custom_weekdays_arabic">
        <item>M</item>
        <item>T</item>
        <item>W</item>
        <item>T</item>
        <item>F</item>
        <item>S</item>
        <item>S</item>
    </string-array>
    <string name="January">January</string>
    <string name="February">February</string>
    <string name="march">March</string>
    <string name="April">April</string>
    <string name="May">May</string>
    <string name="June">June</string>
    <string name="July">July</string>
    <string name="August">August</string>
    <string name="September">September</string>
    <string name="October">October</string>
    <string name="November">November</string>
    <string name="December">December</string>
    <string name="accept_our_terms_and_conditions"><u>Accept Our Terms And Conditions</u></string>
    <string name="click_here_to_read"><u>Click Here to read</u></string>
    <string name="see_all"><u>See all</u></string>
    <string name="view_more"><u>View More</u></string>
    <string name="send_me_a_new_code"><u>Send me a new code</u></string>
    <string name="detailsDark">Dark circles under your eyes happen when the skin beneath both eyes appears darkened.It\'s different from bruising around one eye from an injury or redness and swelling in one eye caused by an infection</string>
    <string name="tipsDarkCircle">1-Apply a cold compress.\n2-Get extra sleep.\n3-Cold tea bags.</string>
    <string name="detailsFineLines">Having lines under your eyes is a normal part of getting older, because the area under your eyeball is thin skin with blood vessels.</string>
    <string name="tipsFineLine">1-Moisturize and exfoliate.\n2-Applying sunscreen with SPF 30 daily.\n3-Massaging the eye area\n4-Eating a healthy diet.</string>
    <string name="detailsPuffyEyes">With aging some of the muscles supporting your eyelids, weaken. Fluid also may accumulate in the space below your eyes, adding to the swelling.</string>
    <string name="tipsPuffyEyes">1-cool compresses\n2-Avoid salty meals.\n3-Don’t smoke.\n4-Sleep enough</string>
    <string name="detailsChappedLips">It is characterized by dry, cracked or sore lips. Sun exposure can contribute to chapping of the lips. Licking or biting the lips is often a contributing factor.</string>
    <string name="tipsChappedLips">1-Excessive moisturizing and  avoid sun exposure\n2-Enough water drinking\n3-Eat healthy balanced diet\n4-Avoid frequent licking</string>
    <string name="detailsCrackedCornerLips">Is inflammation of one or both corners of the mouth. Often the corners are red with skin breakdown and crusting.</string>
    <string name="tipsCrackedCornerLips">1-Exfoliate it before anything.\n2-Steaming for 3 to 5 minutes to remove the peel or dead skin easily.\n3-Apply lip balm or simply Petroleum jelly or Olive oil, coconut oil.</string>
    <string name="detailsSuddenSwollenLips">Excessive fluid under the lip`s skin or underlying inflammation. Some of common causes are Injuries, wounds, allergic reaction due to some foods, medication, insect`s bite.</string>
    <string name="tipsSuddenSwollenLips">1-You can massage your lips with ice cubes.\n2-Do not rub your lips as it may cause cuts or cracks.\n3-Avoid irritants and makeup until healing.</string>
    <string name="detailsSunburnedLips">In this case lips appear as swollen, feel tender on touching, blister on or around the lips, feel difficulties during talking eating or drinking. Lips seem dark red or black colored.</string>
    <string name="tipsSunburnedLips">1-Avoid excessive sun exposure.\n2-Do not apply petroleum jelly.\n3-Do not apply oils in this case.\n4-Apply Cold compress.</string>
    <string name="detailsNormalSkin">This skin is neither too dry nor too oily. It has regular texture, no imperfections and a clean, soft appearance, and does not need special care.</string>
    <string name="tipsNormalSkin">1-Eat a healthy diet.\n2-Use a sunscreen with at least spf 15+.\n3-Treat your skin gently.</string>
    <string name="detailsOilySkin">Oily skin has a porous, humid and bright appearance. It is caused by excessive fat production, and usually determined by genetic and/or hormonal causes. It is usually related with the occurrence of acne.</string>
    <string name="tipsOilySkin">1-Manage stress\n2-Eat a healthy diet\n3-Apply acne medication first before moisturizer or makeup</string>
    <string name="detailsMixedSkin">Based on its location, it presents characteristics of both dry and oily skin. The area with more oil is usually the T- zone (forehead, nose, and chin), while the skin on the cheeks is normal or dry.</string>
    <string name="tipsMixedSkin">1-Use a sunscreen with at least spf 15+\n2-Eat a healthy diet\n3-Limit washing to twice a day and after perspiring</string>
    <string name="detailsDrySkin">It is generally characterized by a feeling of tightness and roughness. It may also acquire an ashy gray color, itching, redness and small cracks. It loses its barrier, making it easy for infection and irritants to enter it.</string>
    <string name="tipsDrySkin">1-Drink enough amount of water\n2-Treat your skin gently\n3-Use a gentle, non-abrasive cleanser that does not contain alcohol.</string>
    <string name="detailsDandruff">It is a skin condition that mainly affects the scalp. Symptoms include flaking and sometimes mild itchiness.Some of dandruff causes are dry skin and bad reactions to hair products, and hormonal changes.</string>
    <string name="tipsDandruff">1-Minimize stress levels.\n2-Apply aloe Vera.\n3-Use coconut oil.</string>
    <string name="detailsHairDamage">Hair damage occurs when one or more parts of the hair structure are altered, which weakens hair and it looks like unhealthy hair.It can be done through washing, drying, styling, chemical or coloring services.</string>
    <string name="tipsHairDamage">1-Avoid over-washing.\n2-Avoid over-brushing\n3-Avoid tight hair style.</string>
    <string name="detailsHairLoss">It is normal for a certain amount of hair to fall out every day. People usually lose up to 100 hairs each day.it happened through stress, hormonal imbalance &amp;Alopecia areata.</string>
    <string name="tipsHairLoss">1-Try scalp massage\n2-Avoid hot showers\n3-Change your hair products</string>
    <string name="detailsSkinCare">	Skin care is the range of practices that support skin integrity, enhance its appearance and relieve skin conditions.</string>
    <string name="tipsSkinCare">1-Keep your baby out of the sun.\n2-Be mindful of dry skin.\n3-Follow best practices for bathing.</string>
    <string name="detailsHairCare"> Hair care: is an overall term for hygiene and cosmetology involving the hair which grows from the human scalp, and to a lesser extent facial, pubic and other body hair.</string>
    <string name="tipsHairCare">1-Take care of kids’ diet.\n2-Choose a shampoo that cleanses the hair.\n3-Protect their hair from harsh climatic conditions.</string>
    <string name="detailsDiaperArea">Diaper area: is sensitive area for babies and the common condition occurred called diaper rash.</string>
    <string name="tipsDiaperArea">1-Change diapers often.\n2-Don’t over tighten diapers.\n3-Consider using ointment regularly.</string>
    <string name="detailsFootHand">1-Warm, dark and  Moist.\n2-Dry skin.\n3-Rash .</string>
    <string name="tipsFootHand">1-Choose the right moisturizer.\n2-Wear the right shoe size.\n3-Don’t go barefoot in public.</string>
    <string name="detailsKneeElbow">1-Dark patches.\n2-Dry skin.\n3-Small bumps.</string>
    <string name="tipsKneeElbow">1-Maintain a healthy weight.\n2-Keep moving.\n3-Perfect your posture.</string>
    <string name="detailsNails"> 1-Weakness.\n2-Cracking.\n3-Injury &amp; infections.</string>
    <string name="tipsNails">1-Keep nails clean and dry.\n2-Cut nails straight across.\n3-Do not bite fingernails or remove the cuticle.</string>
    <string name="detailsBikiniArea">1-Discoloration between thighs.\n2-Hyperpigmentation of the bikini line.</string>
    <string name="tipsBikiniArea">1-Moisturize it.\n2-Wear cotton clothes.\n3-Calm your skin after shaving.</string>
    <string name="detailsUnderarmArea">1-Dry skin\n2-Hyperpigmentation.</string>
    <string name="tipsUnderarmArea">1-Moisturize it.\n2-Wear cotton clothes.\n3-Calm your skin after shaving.</string>
    <string name="description_hair_loss">It is normal for a certain amount of hair to fall out every day. People usually lose up to 100 hairs each day.</string>
    <string name="about">About</string>
    <string name="about_us">About us</string>
    <string name="description_about_us">We believe that beauty is the\n mirror of health.We providing\n higher level of wellness that\n our customers deserve.</string>
    <string name="foot_amp_hand"><![CDATA[Foot & hand]]></string>
    <string name="knee_amp_elbow"><![CDATA[Knee & elbow]]></string>
    <string name="nails">Nails</string>
    <string name="sensitive_area">Sensitive Area</string>
    <string name="videos_body">Videos</string>
    <string name="body_products">Body Products</string>
    <string name="problems_foot_hand_body">Problems</string>
    <string name="tips_foot_hand_body">Tips</string>
    <string name="natural_recipes_foot_hand_body">Natural\n Recipes</string>
    <string name="problems_knee_body">Problems</string>
    <string name="tips_knee_body">Tips</string>
    <string name="natural_recipes_knee_body">Natural Recipes</string>
    <string name="problems_nails_body">Problems</string>
    <string name="tips_nails_body">Tips</string>
    <string name="natural_recipes_nails_body">Natural Recipes</string>
    <string name="bikini_body">Bikini</string>
    <string name="under_arm_body">Under Arm</string>
    <string name="problems_bikini_body">Problems</string>
    <string name="tips_bikini_body">Tips</string>
    <string name="natural_nrecipes_bikini_body">Natural\nRecipes</string>
    <string name="problems_arm_body">Problems</string>
    <string name="tips_arm_body">Tips</string>
    <string name="natural_nrecipes_arm_body">Natural\nRecipes</string>
    <string name="checkout_page">Checkout</string>
    <string name="shipping_address_chaeckout_page">SHIPPING ADDRESS</string>
    <string name="exit_app">Exit App</string>
    <string name="do_you_want_to_exit_from_app">Do you want to exit from app?</string>
    <string name="exit">Exit</string>
    <string name="back">back</string>
    <string name="dry">Dry</string>
    <string name="search_for_anything">Search for products…</string>
    <string name="recently_viewed">RECENTLY VIEWED</string>
    <string name="clear">CLEAR</string>
    <string name="recommended">RECOMMENDED</string>
    <string name="kids">Kids</string>
    <string name="body">Body</string>
    <string name="face">Face</string>
    <string name="hair">Hair</string>
    <string name="all_article">All Article</string>
    <string name="no_item_found">No item Found</string>
    <string name="your_skin_type_is">Your skin type is</string>
    <string name="let_s_go">Let\'s go</string>
    <string name="viola">Viola</string>
    <string name="vola">vola</string>
    <string name="ebafix">Ebafix</string>
    <string name="aloekita">Aloekita</string>
</resources>