<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data></data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root_constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.gifting.kefi.ui.fragments.search.SearchFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:background="@drawable/raduis_bottom2"
            android:elevation="2dp"
            app:contentInsetStart="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/search_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_below="@+id/toolbar"
            android:layout_marginStart="39dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="39dp"
            android:background="@drawable/shadow_full_rounded_shape"
            android:elevation="2dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/search_editText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:background="@drawable/raduis_white"
                android:drawablePadding="19dp"
                android:hint="@string/search_for_anything"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:textColor="@color/bink"
                android:textColorHint="#EBC7D0"
                android:textSize="@dimen/_11sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/search_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="@dimen/_5sdp"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/ic_search_icon" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="50dp"
            android:clipToPadding="false"
            android:paddingStart="@dimen/_18sdp"
            android:paddingTop="70dp"
            android:paddingEnd="@dimen/_18sdp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:listitem="@layout/item_product" />

        <LinearLayout
            android:id="@+id/layout_recent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/search_layout"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/search_layout">

            <RelativeLayout
                android:id="@+id/recent_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_19sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:fontFamily="@font/arial_regular"
                    android:text="@string/recently_viewed"
                    android:textColor="#80EB839D"
                    android:textSize="@dimen/_9sdp" />

                <TextView
                    android:id="@+id/clear_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_19sdp"
                    android:fontFamily="@font/arial_regular"
                    android:text="@string/clear"
                    android:textColor="#EB839D"
                    android:textSize="@dimen/_9sdp" />

            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recently_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_80sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:clipToPadding="false"
                android:paddingStart="@dimen/_16sdp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:spanCount="10"
                tools:itemCount="1"
                tools:listitem="@layout/item_recent_search" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_19sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:fontFamily="@font/arial_regular"
                    android:text="@string/recommended"
                    android:textColor="#80EB839D"
                    android:textSize="@dimen/_9sdp" />


            </RelativeLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_7sdp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/first_recommend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arial_regular"
                    android:gravity="end"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/aloekita"
                    android:textColor="#EB839D"
                    android:textSize="@dimen/_9sdp"
                    app:layout_constraintEnd_toStartOf="@+id/second_recommend"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/second_recommend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arial_regular"
                    android:gravity="center_horizontal"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/ebafix"
                    android:textColor="#EB839D"
                    android:textSize="@dimen/_9sdp"
                    app:layout_constraintEnd_toStartOf="@+id/third_recommend"
                    app:layout_constraintStart_toEndOf="@+id/first_recommend"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/third_recommend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arial_regular"
                    android:gravity="center_horizontal"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/vola"
                    android:textColor="#EB839D"
                    android:textSize="@dimen/_9sdp"
                    app:layout_constraintEnd_toStartOf="@+id/fourth_recommend"
                    app:layout_constraintStart_toEndOf="@+id/second_recommend"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/fourth_recommend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arial_regular"
                    android:gravity="start"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/viola"
                    android:textColor="#EB839D"
                    android:textSize="@dimen/_9sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/third_recommend"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/load_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/toolbar" />

        <TextView
            android:id="@+id/no_item_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/no_item_found"
            android:textColor="@color/bink_lightest"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_layout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

